--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -1,4 +1,10 @@
 <div class="page-container">
   <h1 class="selected-filter">{{selectedText}}</h1> 
   <app-filter-panel></app-filter-panel>
+
+  <div >
+    <app-filter-aside-panel></app-filter-aside-panel>
+
+  </div>
 </div>
+
