create product-card and list-product-card

--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -1,4 +1,8 @@
 <div class="page-container">
   <h1 class="selected-filter">{{selectedText}}</h1> 
   <app-filter-panel></app-filter-panel>
+  
+  <div class="page-containter__content-with-side-filters">
+    
+  </div>
 </div>
