--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -1,16 +1,10 @@
 <div class="page-container">
   <h1 class="selected-filter">{{selectedText}}</h1> 
   <app-filter-panel></app-filter-panel>
-<<<<<<< HEAD
-  
-  <div class="page-containter__content-with-side-filters">
-    
-=======
 
-  <div >
+  <div class="page-container__content">
     <app-filter-aside-panel></app-filter-aside-panel>
-
->>>>>>> dd334ea5a009396012dc6091a3d1d0e84258ffd9
+    <app-list-product-card-catalog [products]="products"></app-list-product-card-catalog>
   </div>
 </div>
 
