--- a/client/src/app/pages/product-page/product-page.component.scss
+++ b/client/src/app/pages/product-page/product-page.component.scss
@@ -7,7 +7,21 @@
     margin-bottom: 8px;
   }
 
-  .filter-panel{
+  .filter-panel {
     margin-top: 10px;
+  }
+
+  .page-container__content {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+
+  app-filter-aside-panel {
+    width: 20%;
+  }
+
+  app-list-product-card-catalog {
+    width: 80%;
   }
 }
