--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -7,14 +7,15 @@
     </div>
   </div>
   <app-seach-bar class="search-bar"></app-seach-bar>
-
   <div class="sign-in-container">
+    <p class="sys-info">О системе</p>
+    <p class="devs-info">О разработчиках</p>
+    <button class="sign-in-container__cart-btn">
+      <img src="cart-icon.png" width="18px" height="14px" alt="signIcon" />
+    </button>
     <button class="sign-in-container__sign-btn">
       <img src="sign-in-icon.png" width="10px" height="12px" alt="signIcon" />
       Войти
-    </button>
-    <button class="sign-in-container__cart-btn">
-      <img src="cart-icon.png" width="18px" height="14px" alt="signIcon" />
     </button>
   </div>
 </nav>
