--- a/client/src/app/components/navbar/navbar.component.scss
+++ b/client/src/app/components/navbar/navbar.component.scss
@@ -31,16 +31,26 @@ nav {
   }
 }
 .search-bar {
- width: 63%;
+  width: 53%;
 }
 
 .sign-in-container {
-  width: 20%;
+  width: 30%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  gap: 8px;
+  gap: 16px;
+
+  .sys-info {
+    font-size: 16px;
+    color: #0077fe;
+  }
+  .devs-info {
+    font-size: 16px;
+    color: #0077fe;
+  }
+
   .sign-in-container__sign-btn {
     font-size: 16px;
     color: #0077fe;
@@ -49,19 +59,19 @@ nav {
     flex-direction: row;
     align-items: center;
     gap: 4px;
-    border: 1px solid #0077fe;
-    border-radius: 16px;
+    // border: 1px solid #0077fe;
+    // border-radius: 16px;
     height: 100%;
-    padding: 8px 18px;
+    padding: 8px 8px;
   }
 
   .sign-in-container__cart-btn {
     color: #0077fe;
     display: flex;
     align-items: center;
-    border: 1px solid #0077fe;
-    border-radius: 16px;
+    // border: 1px solid #0077fe;
+    // border-radius: 16px;
     height: 100%;
-    padding: 8px 18px;
+    padding: 8px 8px;
   }
 }
