--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
     <img src="logo.png" width="50px" height="50px" alt="logoImg" />
     <div class="company-logo__info">
       <h1>ATECH SHOP</h1>
-      <p>Комлектующие для ПК</p>
+      <p>Комплектующие для ПК</p>
     </div>
   </div>
   <app-seach-bar class="search-bar"></app-seach-bar>
@@ -13,7 +13,7 @@
     <button class="sign-in-container__cart-btn">
       <img src="cart-icon.png" width="18px" height="14px" alt="signIcon" />
     </button>
-    <button class="sign-in-container__sign-btn">
+    <button class="sign-in-container__sign-btn" (click)="openSignInModal()"> 
       <img src="sign-in-icon.png" width="10px" height="12px" alt="signIcon" />
       Войти
     </button>
