--- a/client/src/app/components/list-product-card-catalog/list-product-card-catalog.component.html
+++ b/client/src/app/components/list-product-card-catalog/list-product-card-catalog.component.html
@@ -1,3 +1,11 @@
-<div class="catalog">
+<!-- <div class="catalog">
   <app-product-card-catalog *ngFor="let product of products" [product]="product"></app-product-card-catalog>
+</div> -->
+
+<div class="catalog">
+  <app-product-card-catalog 
+    *ngFor="let product of products" 
+    [product]="product" 
+    (productSelected)="onProductSelected($event)">
+  </app-product-card-catalog>
 </div>
