--- a/client/src/app/components/product-card-catalog/product-card-catalog.component.html
+++ b/client/src/app/components/product-card-catalog/product-card-catalog.component.html
@@ -1,7 +1,7 @@
 <div class="product-card">
-  <div class="product-img-wrapper">
+  <div class="product-img-wrapper" (click)="onProductClick()">
     <img
-      src="{{ product.img }}"
+      [src]="product.img"
       width="200px"
       height="200px"
       alt="productImg"
