--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -1,9 +1,17 @@
- <div class="page-container">
+<div class="page-container">
   <h1 class="selected-filter">{{ selectedText }}</h1>
   <app-filter-panel></app-filter-panel>
 
   <div class="page-container__content">
     <app-filter-aside-panel (filtersChanged)="onFiltersChange($event)"></app-filter-aside-panel>
-    <app-list-product-card-catalog [products]="filteredProducts"></app-list-product-card-catalog>
+    
+    <app-list-product-card-catalog 
+    [products]="filteredProducts" 
+    (productSelected)="onProductSelected($event)">
+  </app-list-product-card-catalog>
   </div>
-</div>
+  <app-module-window-card *ngIf="openTheDoor" [product]="selectedProduct" (modalClose)="closeModal()"></app-module-window-card>
+
+
+
+</div> 
