--- a/client/src/app/components/filter-aside-panel/filter-aside-panel.component.html
+++ b/client/src/app/components/filter-aside-panel/filter-aside-panel.component.html
@@ -1,4 +1,4 @@
- <div class="filter-asside-cont">
+ <!-- <div class="filter-asside-cont">
     <p class="filter-name">Фильтрация</p>
   
     <form class="form-group" [formGroup]="addProductFrom">
@@ -24,6 +24,54 @@
           <div class="form-item">
             <input type="number" formControlName="maxWarranty" placeholder="Месяцев" class="warranty-input warranty-input2" />
           </div>
+        </div>
+        <hr class="line">
+      </div>
+  
+      <button (click)="sendToParent()" [disabled]="addProductFrom.invalid" class="filter-asside-btn">
+        Применить
+      </button>
+    </form>
+  </div> -->
+
+  <div class="filter-asside-cont">
+    <p class="filter-name">Фильтрация</p>
+  
+    <form class="form-group" [formGroup]="addProductFrom">
+      <div class="filter-by-price">
+        <p class="filter-name-price">Цена от и до:</p>
+        <div class="form-item-cont">
+          <div class="form-item">
+            <input type="number" formControlName="minPrice" placeholder="₽" class="price-input price-input1" />
+          </div>
+          <div class="form-item">
+            <input type="number" formControlName="maxPrice" placeholder="₽" class="price-input price-input2" />
+          </div>
+        </div>
+        <hr class="line">
+      </div>
+  
+      <div class="filter-by-warranty">
+        <p class="filter-name-warranty">Гарантия от и до:</p>
+        <div class="form-item-cont">
+          <div class="form-item">
+            <input type="number" formControlName="minWarranty" placeholder="Месяцев" class="warranty-input warranty-input1" />
+          </div>
+          <div class="form-item">
+            <input type="number" formControlName="maxWarranty" placeholder="Месяцев" class="warranty-input warranty-input2" />
+          </div>
+        </div>
+        <hr class="line">
+      </div> 
+  
+      <!-- Новый фильтр по производителю -->
+      <div class="filter-by-manufacturer">
+        <p class="filter-name-manufacturer">По производителю:</p>
+        <div class="form-item">
+          <select formControlName="manufacturer" class="manufacturer-select">
+            <option value="">Все</option>
+            <option class="filter-manufacturer-item" *ngFor="let manufacturer of manufacturers" [value]="manufacturer">{{ manufacturer }}</option>
+          </select>
         </div>
         <hr class="line">
       </div>
