--- a/client/src/app/components/filter-aside-panel/filter-aside-panel.component.scss
+++ b/client/src/app/components/filter-aside-panel/filter-aside-panel.component.scss
@@ -11,7 +11,7 @@
 
   }
 
-.filter-name-price, .filter-name-warranty{
+.filter-name-price, .filter-name-warranty, .filter-name-manufacturer{
     font-size: 16px;
     font-family: "Nunito", sans-serif;
     font-weight: bold;
@@ -96,4 +96,20 @@ width: 108px;
 
 .filter-by-price{
     margin-bottom: 70px;
+}
+
+.filter-by-manufacturer{
+  margin-top: 70px;
+}
+
+
+select option {
+  color: #333; /* Цвет текста по умолчанию */
+  background-color: #fff; /* Цвет фона по умолчанию */
+}
+
+/* Стиль для опций при наведении */
+select option:hover {
+  color: #fff; /* Цвет текста при наведении */
+  background-color: #007bff; /* Цвет фона при наведении (например, синий) */
 }
