--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -15,7 +15,6 @@
 
   <app-module-window-card *ngIf="openTheDoor" [product]="selectedProduct" (modalClose)="closeModal()"></app-module-window-card>
 <app-sort-panel (sortChanged)="onSortChange($event)"></app-sort-panel>
-    <app-list-product-card-catalog [products]="filteredProducts"></app-list-product-card-catalog>
-  </div>
+    <!-- <app-list-product-card-catalog [products]="filteredProducts"></app-list-product-card-catalog> -->
 
 </div>
