--- a/client/src/app/pages/product-page/product-page.component.html
+++ b/client/src/app/pages/product-page/product-page.component.html
@@ -4,8 +4,12 @@
 
 
   <div class="page-container__content">
-    <app-filter-aside-panel (filtersChanged)="onFiltersChange($event)"></app-filter-aside-panel>
-    
+   
+    <div>
+      <app-filter-aside-panel (filtersChanged)="onFiltersChange($event)"></app-filter-aside-panel>
+      <app-sort-panel (sortChanged)="onSortChange($event)"></app-sort-panel>
+
+    </div>
     <app-list-product-card-catalog 
       [products]="filteredProducts" 
       (productSelected)="onProductSelected($event)">
@@ -15,6 +19,6 @@
 
   <app-module-window-card *ngIf="openTheDoor" [product]="selectedProduct" (modalClose)="closeModal()"></app-module-window-card>
 <app-sort-panel (sortChanged)="onSortChange($event)"></app-sort-panel>
-    <!-- <app-list-product-card-catalog [products]="filteredProducts"></app-list-product-card-catalog> -->
+    
 
 </div>
