--- a/client/src/app/components/navbar/navbar.component.scss
+++ b/client/src/app/components/navbar/navbar.component.scss
@@ -13,6 +13,7 @@ nav {
   display: flex;
   flex-direction: row;
   gap: 8px;
+  cursor: pointer;
   .company-logo__info {
     display: flex;
     flex-direction: column;
@@ -73,5 +74,21 @@ nav {
     // border-radius: 16px;
     height: 100%;
     padding: 8px 8px;
+    position: relative;
+
+    .cart-counter {
+      background-color: rgb(237, 72, 72);
+      font-size: 12px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 16px;
+      height: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      border-radius: 50%;
+    }
   }
 }
