--- a/client/src/app/components/filter-panel/filter-panel.component.html
+++ b/client/src/app/components/filter-panel/filter-panel.component.html
@@ -1,4 +1,4 @@
-<div class="filter-panel">
+<!-- <div class="filter-panel">
   <div class="filter-panel__list">
     <app-filter-item
       (click)="onClickHandler(item, i)"
@@ -6,5 +6,17 @@
       [ngClass]="{ active: activeBtnIndex === i, 'non-active': activeBtnIndex !== i}"
       [btnText]="item"
     ></app-filter-item>
+  </div>
+</div> -->
+
+
+<div class="filter-panel">
+  <div class="filter-panel__list">
+    <app-filter-item
+      (click)="onClickHandler(item, i)"
+      *ngFor="let item of filterItems; let i = index"
+      [ngClass]="{ active: activeBtnIndex === i, 'non-active': activeBtnIndex !== i}"
+      [btnText]="item">
+    </app-filter-item>
   </div>
 </div>
