--- a/client/src/app/components/modal-window-sign-up/modal-window-sign-up.component.scss
+++ b/client/src/app/components/modal-window-sign-up/modal-window-sign-up.component.scss
@@ -34,3 +34,8 @@
     font-family: "Nunito", sans-serif;
     border: none;
   }
+  .error {
+    color: red;
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
