--- a/client/src/app/components/modal-window-sign-in/modal-window-sign-in.component.html
+++ b/client/src/app/components/modal-window-sign-in/modal-window-sign-in.component.html
@@ -1,10 +1,26 @@
 <div class="modal-content">
   <h2>Вход в аккаунт</h2>
-  <p>Введите почту и пароль</p>
-  <form>
-    <input type="email" placeholder="Email" required />
-    <input type="password" placeholder="Пароль" required />
-    <button type="submit" class="sign-in-button">Войти</button>
-    <button type="button" class="sign-up-button" (click)="openSignUpModal()">Если нет аккаунта - зарегистрируйтесь</button>
+  <p>Введите ваш логин и пароль</p>
+  <form [formGroup]="signInForm" (ngSubmit)="onSubmit()">
+    <input
+      type="text"
+      formControlName="email"
+      placeholder="Email"
+    />
+    <small *ngIf="email?.invalid && email?.touched" class="error">
+      {{ getEmailErrorMessage() }}
+    </small>
+
+    <input
+      type="password"
+      formControlName="password"
+      placeholder="Пароль"
+    />
+    <small *ngIf="password?.invalid && password?.touched" class="error">
+      {{ getPasswordErrorMessage() }}
+    </small>
+
+    <button type="submit" class="sign-in-button" [disabled]="signInForm.invalid">Войти</button>
   </form>
+  <button class="sign-up-button" (click)="openSignUpModal()">Если нет аккаунта - зарегистрируйтесь</button>
 </div>
