--- a/client/src/app/UI/seach-bar/seach-bar.component.scss
+++ b/client/src/app/UI/seach-bar/seach-bar.component.scss
@@ -7,13 +7,15 @@
   padding: 0px 10px;
   background-color: rgb(246, 246, 246);
   height: 100%;
-  width: 50%;
+  width: 100%;
+  justify-content: center;
 }
   
   input {
     font-size: 16px;
     font-family: "Nunito", sans-serif;
     padding: 20px;
+
   }
 
   input::placeholder {
