--- a/client/src/app/pages/devs-info-page/devs-info-page.component.html
+++ b/client/src/app/pages/devs-info-page/devs-info-page.component.html
@@ -1,1 +1,25 @@
-<p>devs-info-page works!</p>
+<div>
+    <h1>О разработчиках</h1>
+    <p>Самарский университет</p>
+    <p>Институт информатики и кибернетики</p>
+    <p>Кафедра программных систем</p>
+    <br>
+    <p class="bold-text">Курсовой проект по дисциплине</p>
+    <p>"Програмная инженерия"</p>
+    <br>
+    <p class="bold-text" class="color">Тема проекта: "Разработка интернет-магазина компьютерных комплектующих"</p>
+    <br>
+    <p class="bold-text">Разработчики (обучающиеся группы 6401-020302D)</p>
+    <p>Климов А.С.</p>
+    <p>Суров Е.Р.</p>
+    <p>Губанов А.И.</p>
+    <p>Руководитель: Зеленко Л.С.</p>
+    <br>
+    <p class="bold-text">Самара 2024</p>
+</div>
+
+<div class="image-slider">
+  <div class="slides">
+    <img [src]="images[currentIndex]" [alt]="'Image ' + (currentIndex + 1)" />
+  </div>
+</div>
