--- a/client/src/app/pages/devs-info-page/devs-info-page.component.html
+++ b/client/src/app/pages/devs-info-page/devs-info-page.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="div-text">
     <h1>О разработчиках</h1>
     <p>Самарский университет</p>
     <p>Институт информатики и кибернетики</p>
@@ -10,9 +10,9 @@
     <p class="bold-text" class="color">Тема проекта: "Разработка интернет-магазина компьютерных комплектующих"</p>
     <br>
     <p class="bold-text">Разработчики (обучающиеся группы 6401-020302D)</p>
-    <p>Климов А.С.</p>
-    <p>Суров Е.Р.</p>
-    <p>Губанов А.И.</p>
+    <p>Климов А.С. <a href="https://vk.com/salazarrr" target="_blank">VK</a></p>
+    <p>Суров Е.Р. <a href="https://vk.com/surovegor" target="_blank">VK</a></p>
+    <p>Губанов А.И. <a href="https://vk.com/alex_sisg" target="_blank">VK</a></p>
     <p>Руководитель: Зеленко Л.С.</p>
     <br>
     <p class="bold-text">Самара 2024</p>
