--- a/client/src/app/pages/devs-info-page/devs-info-page.component.scss
+++ b/client/src/app/pages/devs-info-page/devs-info-page.component.scss
@@ -10,7 +10,7 @@ body {
     height: 100vh;
 }
 
-div {
+.div-text{
     background-color: #fff;
     padding: 30px;
     border-radius: 8px;
@@ -28,6 +28,10 @@ h1 {
     margin-bottom: 20px;
 }
 
+a{
+    color: #00A9FE;
+}
+
 p {
 
     font-size: 1.2em;
@@ -43,13 +47,10 @@ p {
     color: #00A9FE;
 }
 
-/* Стили для слайдера */
 .image-slider {
-    position: relative;
-    width: 100%;
-    height: 300px; /* Установите нужную высоту */
-    overflow: hidden;
-    margin-top: 30px;
+    display: flex;
+    justify-content: center; 
+    margin-top: 50px;
   }
   
   .slides {
@@ -58,7 +59,7 @@ p {
   }
   
   .slides img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover; /* Чтобы изображения заполнили контейнер */
+    width: 600px;
+    height: 720px;
+
   }
